--- a/about me.html
+++ b/about me.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -58,18 +59,41 @@
       font-size: 14px;
       color: #a86c88;
     }
+    /* Profile Box Styling */
+    .profile-box {
+      width: 220px;
+      height: 220px;
+      margin: 20px auto;
+      background-color: #fff;
+      border: 4px solid #c71585;
+      border-radius: 10px;
+      padding: 10px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .profile-box img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 6px;
+    }
   </style>
 </head>
 <body>
 
 <header>
   <h1>MY CV</h1>
+  <div class="profile-box">
+    <img src="profile.jpg.jpg" alt="Profile photo of Nur Aina Erize">
+  </div>
 </header>
 
 <nav>
   <a href="index.html">Home</a>
   <a href="about me.html">About Me</a>
-  <a href="cv.html">CV</a>
+  <a href="cv.html" class="active">CV</a>
   <a href="portfolio.html">Portfolio</a>
   <a href="contacts.html">Contact</a>
 </nav>
