update about me

--- a/about me.html
+++ b/about me.html
@@ -107,7 +107,7 @@
     <li>Course title: Advanced Web Design and Content Management</li>
     <li>Programme code: N5CDIM244</li>
     <li>Submission date: 26 May 2025</li>
-    <li>Published URL: <em>(insert your published site URL here)</em></li>
+    <li>Published URL: <em>(https://ainaerize.github.io/IMS456-AinaErize-CDIM244EKA-2025/)</em></li>
   </ul>
 </div>
 
